--- a/Family Grocery/Views/Base.lproj/Main.storyboard
+++ b/Family Grocery/Views/Base.lproj/Main.storyboard
@@ -281,15 +281,12 @@
                                 <rect key="frame" x="10" y="712" width="408" height="72"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New Grocery Item..." textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="GkV-1l-wA7">
-                                        <rect key="frame" x="0.0" y="0.0" width="358" height="72"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343.66666666666669" height="72"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vxt-oi-BiD">
-                                        <rect key="frame" x="358" y="0.0" width="50" height="72"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="GcB-CU-2Bw"/>
-                                        </constraints>
+                                        <rect key="frame" x="343.66666666666669" y="0.0" width="64.333333333333314" height="72"/>
                                         <color key="tintColor" systemColor="systemTealColor"/>
                                         <state key="normal">
                                             <color key="titleColor" systemColor="systemTealColor"/>
@@ -300,33 +297,33 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="labelColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qxv-mc-Usy">
                                 <rect key="frame" x="10" y="56" width="408" height="651"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemCell" id="kdh-qb-TiW" customClass="GroceryItemTableViewCell" customModule="Family_Grocery" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.333333969116211" width="408" height="54.333332061767578"/>
+                                        <rect key="frame" x="0.0" y="24.333333969116211" width="408" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kdh-qb-TiW" id="hbW-Wc-9Dq">
-                                            <rect key="frame" x="0.0" y="0.0" width="408" height="54.333332061767578"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="408" height="45"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="FZH-iA-TOy">
-                                                    <rect key="frame" x="10" y="2" width="388" height="50.333333333333336"/>
+                                                    <rect key="frame" x="10" y="2" width="388" height="41"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="SNg-qi-iHq">
-                                                            <rect key="frame" x="0.0" y="0.0" width="388" height="50.333333333333336"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="388" height="41"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgK-OX-EJg">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="388" height="25.333333333333332"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="388" height="20.666666666666668"/>
                                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nXE-NV-4Lc">
-                                                                    <rect key="frame" x="0.0" y="25.333333333333329" width="388" height="25"/>
+                                                                    <rect key="frame" x="0.0" y="20.666666666666671" width="388" height="20.333333333333329"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -334,9 +331,6 @@
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="5hp-bm-bYv"/>
-                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
@@ -360,6 +354,7 @@
                             <constraint firstItem="IFd-cb-kID" firstAttribute="leading" secondItem="hmA-ja-j18" secondAttribute="leading" constant="10" id="7Fa-l9-2Zu"/>
                             <constraint firstItem="Qxv-mc-Usy" firstAttribute="leading" secondItem="hmA-ja-j18" secondAttribute="leading" constant="10" id="7k3-9R-Nsv"/>
                             <constraint firstItem="Qxv-mc-Usy" firstAttribute="top" secondItem="hmA-ja-j18" secondAttribute="top" id="OgH-yr-reT"/>
+                            <constraint firstItem="vxt-oi-BiD" firstAttribute="width" secondItem="1iK-v4-0Uv" secondAttribute="width" multiplier="0.15" id="Qtj-1c-qLu"/>
                             <constraint firstItem="hmA-ja-j18" firstAttribute="trailing" secondItem="IFd-cb-kID" secondAttribute="trailing" constant="10" id="WJg-ff-U5f"/>
                             <constraint firstItem="IFd-cb-kID" firstAttribute="height" secondItem="1iK-v4-0Uv" secondAttribute="height" multiplier="0.0825688" id="YPK-IL-hyn"/>
                             <constraint firstItem="hmA-ja-j18" firstAttribute="bottom" secondItem="IFd-cb-kID" secondAttribute="bottom" constant="5" id="dzE-Js-X4d"/>
@@ -407,6 +402,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="2mM-z1-xHB">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="108"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -445,9 +441,6 @@
         <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="plus" catalog="system" width="128" height="113"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
